--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,8 @@ project_urls =
 [options]
 packages = attrs_strict
 install_requires =
-    attrs>=19.1.0
-    typing-extensions;python_version<'3.8'
+    attrs>=22.1
+    typing-extensions>=4.3; python_version < "3.8"
 python_requires = >=3.7
 package_dir =
     =src
@@ -41,10 +41,10 @@ where = src
 
 [options.extras_require]
 docs =
-    Sphinx>=5.1
+    Sphinx>=5.1.1
 test =
     covdefaults>=2.2
-    pytest>=7.1
+    pytest>=7.1.2
     pytest-cov>=3
 
 [options.package_data]
