--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,7 +9,7 @@ concurrency:
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -21,11 +21,12 @@ jobs:
 
   test:
     name: ${{ matrix.py }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         py:
+          - "3.11.0-beta.5"
           - "3.10"
           - "3.9"
           - "3.8"
@@ -47,10 +48,9 @@ jobs:
       - name: Pick environment to run
         run: |
           import platform; import os; import sys; import codecs
-          cpy = platform.python_implementation() == "CPython"
-          base =("{}{}{}" if cpy else "{}{}").format("py" if cpy else "pypy", *sys.version_info[0:2])
-          env = "TOXENV={}\n".format(base)
-          print("Picked:\n{}for{}".format(env, sys.version))
+          base = f"py{'' if platform.python_implementation() == 'CPython' else 'py'}3{sys.version_info[1]}"
+          env = f"TOXENV={base}\n"
+          print(f"Picked:\n{env}for{sys.version}")
           with codecs.open(os.environ["GITHUB_ENV"], "a", "utf-8") as file_handler:
                file_handler.write(env)
         shell: python
@@ -59,9 +59,9 @@ jobs:
       - name: run test suite for ${{ matrix.py }}
         run: tox --skip-pkg-install
       - name: Rename coverage report file
-        run:
-          import os; import sys; os.rename(f".tox/.coverage.{os.environ['TOXENV']}",
-          f".tox/.coverage.{os.environ['TOXENV']}-{sys.platform}")
+        run: |
+          import os; import sys
+          os.rename(f".tox/.coverage.{os.environ['TOXENV']}", f".tox/.coverage.{os.environ['TOXENV']}-{sys.platform}")
         shell: python
       - name: Upload coverage data
         uses: actions/upload-artifact@v3
@@ -103,7 +103,7 @@ jobs:
 
   check:
     name: tox env ${{ matrix.tox_env }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -125,7 +125,7 @@ jobs:
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: [check, coverage, lint]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: setup python to build package
         uses: actions/setup-python@v4
@@ -137,7 +137,7 @@ jobs:
       - name: build package
         run: python -m build --sdist --wheel . -o dist
       - name: publish to PyPi
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
           skip_existing: true
           user: __token__
