--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist =
+requires =
+    tox>=4.2
+env_list =
     fix
     py311
     py310
@@ -11,62 +13,60 @@ envlist =
     coverage
     docs
     readme
-isolated_build = true
 skip_missing_interpreters = true
-minversion = 3.21
 
 [testenv]
 description = run tests with {basepython}
-passenv =
-    PIP_*
-    PYTEST_*
-setenv =
-    COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
+package = wheel
+wheel_build_env = .pkg
 extras =
     test
+pass_env =
+    PIP_*
+    PYTEST_*
+set_env =
+    COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
 commands =
     pytest {tty:--color=yes} {posargs: \
       --junitxml {toxworkdir}{/}junit.{envname}.xml --cov {envsitepackagesdir}{/}attrs_strict --cov {toxinidir}{/}tests \
       --cov-config=setup.cfg --no-cov-on-fail --cov-report term-missing:skip-covered --cov-context=test \
       --cov-report html:{envtmpdir}{/}htmlcov --cov-report xml:{toxworkdir}{/}coverage.{envname}.xml \
       tests}
-package = wheel
-wheel_build_env = .pkg
 
 [testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-passenv =
-    *
-basepython = python3.10
+base_python = python3.10
 skip_install = true
 deps =
-    pre-commit>=3.2
+    pre-commit>=3.2.2
+pass_env =
+    *
 commands =
     pre-commit run --all-files --show-diff-on-failure
     python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
 [testenv:type]
 description = run type check on code base
-setenv =
-    {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    mypy==1.1.1
+    mypy==1.2
+set_env =
+    {tty:MYPY_FORCE_COLOR = 1}
 commands =
     mypy --strict src/attrs_strict
 
 [testenv:coverage]
 description = combine coverage files and generate diff (against DIFF_AGAINST defaulting to origin/main)
-passenv =
-    DIFF_AGAINST
-setenv =
-    COVERAGE_FILE = {toxworkdir}/.coverage
 skip_install = true
 deps =
     covdefaults>=2.3
-    coverage>=7.2.2
+    coverage>=7.2.3
     diff-cover>=7.5
 extras =
 parallel_show_output = true
+pass_env =
+    DIFF_AGAINST
+set_env =
+    COVERAGE_FILE = {toxworkdir}/.coverage
 commands =
     coverage combine
     coverage report --skip-covered --show-missing
@@ -102,7 +102,7 @@ commands =
 
 [testenv:dev]
 description = generate a DEV environment
-usedevelop = true
+package = editable
 extras =
     docs
     test
